cmake_minimum_required (VERSION 2.6)
project (live555-ubiq)

include (GenerateExportHeader)

set (headers
	${CMAKE_SOURCE_DIR}/BasicUsageEnvironment/include/BasicHashTable.hh
	${CMAKE_SOURCE_DIR}/BasicUsageEnvironment/include/BasicUsageEnvironment.hh
	${CMAKE_SOURCE_DIR}/BasicUsageEnvironment/include/BasicUsageEnvironment0.hh
	${CMAKE_SOURCE_DIR}/BasicUsageEnvironment/include/BasicUsageEnvironment_version.hh
	${CMAKE_SOURCE_DIR}/BasicUsageEnvironment/include/DelayQueue.hh
	${CMAKE_SOURCE_DIR}/BasicUsageEnvironment/include/HandlerSet.hh
	${CMAKE_SOURCE_DIR}/BasicUsageEnvironment/UpgradeLog.htm
	${CMAKE_SOURCE_DIR}/groupsock/include/GroupEId.hh
	${CMAKE_SOURCE_DIR}/groupsock/include/Groupsock.hh
	${CMAKE_SOURCE_DIR}/groupsock/include/GroupsockHelper.hh
	${CMAKE_SOURCE_DIR}/groupsock/include/groupsock_version.hh
	${CMAKE_SOURCE_DIR}/groupsock/include/IOHandlers.hh
	${CMAKE_SOURCE_DIR}/groupsock/include/NetAddress.hh
	${CMAKE_SOURCE_DIR}/groupsock/include/NetCommon.h
	${CMAKE_SOURCE_DIR}/groupsock/include/NetInterface.hh
	${CMAKE_SOURCE_DIR}/groupsock/include/TunnelEncaps.hh
	${CMAKE_SOURCE_DIR}/liveMedia/EBMLNumber.hh
	${CMAKE_SOURCE_DIR}/liveMedia/H263plusVideoStreamParser.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/AC3AudioFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/AC3AudioRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/AC3AudioRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/AC3AudioStreamFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/ADTSAudioFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/ADTSAudioFileSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/AMRAudioFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/AMRAudioFileSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/AMRAudioFileSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/AMRAudioRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/AMRAudioRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/AMRAudioSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/AudioInputDevice.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/AudioRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/AVIFileSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/Base64.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/BasicUDPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/BasicUDPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/BitVector.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/ByteStreamFileSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/ByteStreamMemoryBufferSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/ByteStreamMultiFileSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/DeviceSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/DigestAuthentication.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/DVVideoFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/DVVideoRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/DVVideoRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/DVVideoStreamFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/FileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/FileSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/FramedFileSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/FramedFilter.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/FramedSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/GenericMediaServer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/GSMAudioRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H261VideoRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H263plusVideoFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H263plusVideoRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H263plusVideoRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H263plusVideoStreamFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H264or5VideoFileSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H264or5VideoRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H264or5VideoStreamDiscreteFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H264or5VideoStreamFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H264VideoFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H264VideoFileSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H264VideoRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H264VideoRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H264VideoStreamDiscreteFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H264VideoStreamFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H265VideoFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H265VideoFileSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H265VideoRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H265VideoRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H265VideoStreamDiscreteFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/H265VideoStreamFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/InputFile.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/JPEGVideoRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/JPEGVideoRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/JPEGVideoSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/liveMedia.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/liveMedia_version.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/Locale.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MatroskaFile.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MatroskaFileServerDemux.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/Media.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MediaSession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MediaSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MediaSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MediaTranscodingTable.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MP3ADU.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MP3ADUinterleaving.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MP3ADURTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MP3ADURTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MP3ADUTranscoder.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MP3AudioFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MP3FileSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MP3Transcoder.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG1or2AudioRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG1or2AudioRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG1or2AudioStreamFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG1or2Demux.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG1or2DemuxedElementaryStream.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG1or2DemuxedServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG1or2FileServerDemux.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG1or2VideoFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG1or2VideoRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG1or2VideoRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG1or2VideoStreamDiscreteFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG1or2VideoStreamFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG2IndexFromTransportStream.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG2TransportFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG2TransportStreamFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG2TransportStreamFromESSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG2TransportStreamFromPESSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG2TransportStreamIndexFile.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG2TransportStreamMultiplexor.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG2TransportStreamTrickModeFilter.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG2TransportUDPServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG4ESVideoRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG4ESVideoRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG4GenericRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG4GenericRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG4LATMAudioRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG4LATMAudioRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG4VideoFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG4VideoStreamDiscreteFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEG4VideoStreamFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MPEGVideoStreamFramer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MultiFramedRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/MultiFramedRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/OggFile.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/OggFileServerDemux.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/OggFileSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/OnDemandServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/ourMD5.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/OutputFile.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/PassiveServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/ProxyServerMediaSession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/QCELPAudioRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/QuickTimeFileSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/QuickTimeGenericRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/RTCP.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/RTPInterface.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/RTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/RTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/RTSPClient.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/RTSPCommon.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/RTSPRegisterSender.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/RTSPServer.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/RTSPServerSupportingHTTPStreaming.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/ServerMediaSession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/SimpleRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/SimpleRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/SIPClient.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/StreamReplicator.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/T140TextRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/TCPStreamSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/TextRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/TheoraVideoRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/TheoraVideoRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/uLawAudioFilter.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/VideoRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/VorbisAudioRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/VorbisAudioRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/VP8VideoRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/VP8VideoRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/VP9VideoRTPSink.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/VP9VideoRTPSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/WAVAudioFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/include/WAVAudioFileSource.hh
	${CMAKE_SOURCE_DIR}/liveMedia/MatroskaDemuxedTrack.hh
	${CMAKE_SOURCE_DIR}/liveMedia/MatroskaFileParser.hh
	${CMAKE_SOURCE_DIR}/liveMedia/MatroskaFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/MP3ADUdescriptor.hh
	${CMAKE_SOURCE_DIR}/liveMedia/MP3AudioMatroskaFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/MP3Internals.hh
	${CMAKE_SOURCE_DIR}/liveMedia/MP3InternalsHuffman.hh
	${CMAKE_SOURCE_DIR}/liveMedia/MP3StreamState.hh
	${CMAKE_SOURCE_DIR}/liveMedia/MPEGVideoStreamParser.hh
	${CMAKE_SOURCE_DIR}/liveMedia/OggDemuxedTrack.hh
	${CMAKE_SOURCE_DIR}/liveMedia/OggFileParser.hh
	${CMAKE_SOURCE_DIR}/liveMedia/OggFileServerMediaSubsession.hh
	${CMAKE_SOURCE_DIR}/liveMedia/rtcp_from_spec.h
	${CMAKE_SOURCE_DIR}/liveMedia/StreamParser.hh
	${CMAKE_SOURCE_DIR}/mediaServer/DynamicRTSPServer.hh
	${CMAKE_SOURCE_DIR}/mediaServer/version.hh
	${CMAKE_SOURCE_DIR}/UsageEnvironment/include/Boolean.hh
	${CMAKE_SOURCE_DIR}/UsageEnvironment/include/HashTable.hh
	${CMAKE_SOURCE_DIR}/UsageEnvironment/include/strDup.hh
	${CMAKE_SOURCE_DIR}/UsageEnvironment/include/UsageEnvironment.hh
	${CMAKE_SOURCE_DIR}/UsageEnvironment/include/UsageEnvironment_version.hh
)

set (sources
	${CMAKE_SOURCE_DIR}/BasicUsageEnvironment/BasicHashTable.cpp
	${CMAKE_SOURCE_DIR}/BasicUsageEnvironment/BasicTaskScheduler.cpp
	${CMAKE_SOURCE_DIR}/BasicUsageEnvironment/BasicTaskScheduler0.cpp
	${CMAKE_SOURCE_DIR}/BasicUsageEnvironment/BasicUsageEnvironment.cpp
	${CMAKE_SOURCE_DIR}/BasicUsageEnvironment/BasicUsageEnvironment0.cpp
	${CMAKE_SOURCE_DIR}/BasicUsageEnvironment/DelayQueue.cpp
	${CMAKE_SOURCE_DIR}/groupsock/inet.c
	${CMAKE_SOURCE_DIR}/groupsock/GroupEId.cpp
	${CMAKE_SOURCE_DIR}/groupsock/Groupsock.cpp
	${CMAKE_SOURCE_DIR}/groupsock/GroupsockHelper.cpp
	${CMAKE_SOURCE_DIR}/groupsock/IOHandlers.cpp
	${CMAKE_SOURCE_DIR}/groupsock/NetAddress.cpp
	${CMAKE_SOURCE_DIR}/groupsock/NetInterface.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/rtcp_from_spec.c
	${CMAKE_SOURCE_DIR}/liveMedia/AC3AudioFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/AC3AudioRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/AC3AudioRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/AC3AudioStreamFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/ADTSAudioFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/ADTSAudioFileSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/AMRAudioFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/AMRAudioFileSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/AMRAudioFileSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/AMRAudioRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/AMRAudioRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/AMRAudioSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/AudioInputDevice.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/AudioRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/AVIFileSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/Base64.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/BasicUDPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/BasicUDPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/BitVector.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/ByteStreamFileSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/ByteStreamMemoryBufferSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/ByteStreamMultiFileSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/DeviceSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/DigestAuthentication.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/DVVideoFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/DVVideoRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/DVVideoRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/DVVideoStreamFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/EBMLNumber.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/FileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/FileSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/FramedFileSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/FramedFilter.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/FramedSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/GenericMediaServer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/GSMAudioRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H261VideoRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H263plusVideoFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H263plusVideoRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H263plusVideoRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H263plusVideoStreamFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H263plusVideoStreamParser.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H264or5VideoFileSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H264or5VideoRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H264or5VideoStreamDiscreteFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H264or5VideoStreamFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H264VideoFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H264VideoFileSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H264VideoRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H264VideoRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H264VideoStreamDiscreteFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H264VideoStreamFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H265VideoFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H265VideoFileSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H265VideoRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H265VideoRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H265VideoStreamDiscreteFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/H265VideoStreamFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/InputFile.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/JPEGVideoRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/JPEGVideoRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/JPEGVideoSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/Locale.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MatroskaDemuxedTrack.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MatroskaFile.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MatroskaFileParser.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MatroskaFileServerDemux.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MatroskaFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/Media.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MediaSession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MediaSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MediaSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MP3ADU.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MP3ADUdescriptor.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MP3ADUinterleaving.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MP3ADURTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MP3ADURTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MP3ADUTranscoder.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MP3AudioFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MP3AudioMatroskaFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MP3FileSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MP3Internals.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MP3InternalsHuffman.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MP3InternalsHuffmanTable.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MP3StreamState.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MP3Transcoder.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG1or2AudioRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG1or2AudioRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG1or2AudioStreamFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG1or2Demux.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG1or2DemuxedElementaryStream.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG1or2DemuxedServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG1or2FileServerDemux.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG1or2VideoFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG1or2VideoRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG1or2VideoRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG1or2VideoStreamDiscreteFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG1or2VideoStreamFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG2IndexFromTransportStream.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG2TransportFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG2TransportStreamFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG2TransportStreamFromESSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG2TransportStreamFromPESSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG2TransportStreamIndexFile.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG2TransportStreamMultiplexor.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG2TransportStreamTrickModeFilter.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG2TransportUDPServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG4ESVideoRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG4ESVideoRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG4GenericRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG4GenericRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG4LATMAudioRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG4LATMAudioRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG4VideoFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG4VideoStreamDiscreteFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEG4VideoStreamFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEGVideoStreamFramer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MPEGVideoStreamParser.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MultiFramedRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/MultiFramedRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/OggDemuxedTrack.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/OggFile.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/OggFileParser.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/OggFileServerDemux.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/OggFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/OggFileSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/OnDemandServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/ourMD5.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/OutputFile.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/PassiveServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/ProxyServerMediaSession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/QCELPAudioRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/QuickTimeFileSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/QuickTimeGenericRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/RTCP.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/RTPInterface.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/RTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/RTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/RTSPClient.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/RTSPCommon.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/RTSPRegisterSender.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/RTSPServer.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/RTSPServerSupportingHTTPStreaming.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/ServerMediaSession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/SimpleRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/SimpleRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/SIPClient.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/StreamParser.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/StreamReplicator.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/T140TextRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/TCPStreamSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/TextRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/TheoraVideoRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/TheoraVideoRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/uLawAudioFilter.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/VideoRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/VorbisAudioRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/VorbisAudioRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/VP8VideoRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/VP8VideoRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/VP9VideoRTPSink.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/VP9VideoRTPSource.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/WAVAudioFileServerMediaSubsession.cpp
	${CMAKE_SOURCE_DIR}/liveMedia/WAVAudioFileSource.cpp
	${CMAKE_SOURCE_DIR}/UsageEnvironment/HashTable.cpp
	${CMAKE_SOURCE_DIR}/UsageEnvironment/strDup.cpp
	${CMAKE_SOURCE_DIR}/UsageEnvironment/UsageEnvironment.cpp
)

include_directories(SYSTEM
	"${CMAKE_SOURCE_DIR}/liveMedia/include"
	"${CMAKE_SOURCE_DIR}/UsageEnvironment/include"
	"${CMAKE_SOURCE_DIR}/groupsock/include"
	"${CMAKE_SOURCE_DIR}/BasicUsageEnvironment/include"
)

if(MSVC)
	set(variables
		CMAKE_C_FLAGS_DEBUG
		CMAKE_C_FLAGS_MINSIZEREL
		CMAKE_C_FLAGS_RELEASE
		CMAKE_C_FLAGS_RELWITHDEBINFO
		CMAKE_CXX_FLAGS_DEBUG
		CMAKE_CXX_FLAGS_MINSIZEREL
		CMAKE_CXX_FLAGS_RELEASE
		CMAKE_CXX_FLAGS_RELWITHDEBINFO
	)
	foreach(variable ${variables})
		if(${variable} MATCHES "/MD")
			string(REGEX REPLACE "/MD" "/MT" ${variable} "${${variable}}")
		endif()
	endforeach()
endif()

add_library(live555
	${headers}
	${sources}
)

target_link_libraries(live555 Ws2_32)
